--- a/plan/static/bootstrap-calendar/tmpls/modal.html
+++ b/plan/static/bootstrap-calendar/tmpls/modal.html
@@ -1,10 +1,8 @@
-<% 	event.date_start = new Date(parseInt(event.start));
-	event.date_end = new Date(parseInt(event.end)); %>
-<div id = "event-meta" class  = "pull-right">
-    <span>Starts on <%= event.date_start.getDate() %> <%= calendar.locale["m" + event.date_start.getMonth()] %> <%= event.date_start.getFullYear() %>, at <%= event.date_start.getHours() %>:<%= event.date_start.getMinutes() %> <i class = "icon-time"></i></span><br />
-    <span>Ends on <%= event.date_end.getDate() %> <%= calendar.locale["m" + event.date_end.getMonth()] %> <%= event.date_end.getFullYear() %> at <%= event.date_end.getHours() %>:<%= event.date_end.getMinutes() %> <i class = "icon-time"></i></span><br />
-</div>
-
-<div style = "margin: 10px 0">
-    <a href = "<%= event.url %>" class = "btn btn-primary"><i class = "icon-calendar"></i> More info</a>
+<% event.date_start = new Date(parseInt(event.start));
+   event.date_end = new Date(parseInt(event.end)); %>
+<div id = "event-meta" class  = "">
+  <span>出发： <%= event.date_start.toLocaleDateString() %> <%= event.date_start.toLocaleTimeString() %> <i class = "icon-time"></i></span><br />
+  <span>返回： <%= event.date_end.toLocaleDateString() %> <%= event.date_end.toLocaleTimeString() %>  <i class = "icon-time"></i></span><br />
+  <span>花销： <%= event.spend %></span><br />
+  <span>详情： <%= event.description %></span><br />
 </div>
